# app_pixel

./: .env  Cargo.toml  Dockerfile  README.md  create_table.sql  docker-compose.yml
crates/app/: .env  Cargo.toml  cargo.toml  Сargo.toml
crates/app/migrations/: 20240315050717_setup.sql  20240419032953_table_image.sql  pixel_tab.sql
crates/app/src/: config.rs  database.rs  lib.rs  main.rs  models.rs  test.rs
crates/build_tools/: Cargo.toml
crates/build_tools/src/: git.rs  lib.rs  rebuild_detector.rs
crates/pixelation/: Cargo.toml
crates/pixelation/src/: lib.rs
crates/pixilation/: Cargo.toml  build.rs
crates/pixilation/src/: lib.rs
docker/: README.md  docker-compose.yml
docker/volumes/db/: pix.sql  roles.sql
