[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["yuriy"]
edition = "2021"
include = ["**/*.rs", "Cargo.toml"]
rust-version = "1.76"
version = "0.1.0-alpha.1+dev"

[workspace.dependencies]
# When using alpha-release, always use exact version, e.g. `version = "=0.x.y-alpha.z"
# This is because we treat alpha-releases as incompatible, but semver doesn't.
# In particular: if we compile platform 0.3.0-alpha.0 we only want it to use
# log_types 0.3.0-alpha.0, NOT 0.3.0-alpha.4 even though it is newer and semver-compatible.
pixilation = { path = "crates/pixilation", version = "=0.1.0-alpha.1", default-features = false }
build_tools = { path = "crates/build_tools", version = "=0.1.0-alpha.1", default-features = false }

clap = { version = "4.5.2", features = ["derive"] }
image = "0.25.0"
kurbo = "0.11.0"

# Serde
serde = { version = "1.0.197", features = ["derive", "default"] }
serde_json = "1.0.114"

# Crypto-related libraries
rand = { version = "0.8.5", features = ["small_rng"] }

# Utility Crates
uuid = { version = "1.7.0", features = ["v4", "serde"] }
dotenvy = "0.15.7"
anyhow = "1.0.80"
tracing-subscriber = { version = "0.3.18", features = ["time", "env-filter"] }
tracing = "0.1.40"
thiserror = "1.0.57"
hyper-tls = "0.6.0"
time = { version = "0.3.34", features = ["serde"] }
chrono = { version = "0.4.35", features = ["serde"] }
ulid = { version = "1.1.2", features = ["serde"] }
url = { version = "2.5.0", features = ["serde"] }
ahash = "0.8.11"
parking_lot = "0.12.1"
strum = "0.26.1"
strum_macros = "0.26.1"
bytes = "1.5.0"
lazy_static = "1.4.0"
validator = "0.17.0"
itertools = "0.12.1"

[profile.dev]
opt-level = 1   # Make debug builds run faster
panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).

[profile.dev.build-override]
debug = true # enable debug symbols for build scripts when building in dev (codegen backtraces!)

# Optimize all dependencies even in debug builds (does not affect workspace packages):
[profile.dev.package."*"]
opt-level = 2

[profile.release]
# debug = true # good for profilers
panic = "abort" # This leads to better optimizations and smaller binaries (and is the default in Wasm anyways).

[profile.bench]
debug = true

[patch.crates-io]
# Try to avoid patching crates! It prevents us from publishing the crates on crates.io.
# If you do patch always prefer to patch to a commit on the trunk of the upstream repo.
# If that is not possible, patch to a branch that has a PR open on the upstream repo.
# As a last resport, patch with a commit to our own repository.
# ALWAYS document what PR the commit hash is part of, or when it was merged into the upstream trunk.
